--- a/frontend/public/main.html
+++ b/frontend/public/main.html
@@ -2,7 +2,9 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <meta name="description" content="Exams coming up and need to know what score you need? Mosachi is perfect for you. Just enter what you think you'll get, and we'll show you your new grade." />
         <title>Mosachi - The Smart Gradebook</title>
+        <link rel="icon" type="image/png" href="/favicon.png">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
