added terms and conditions

--- a/frontend/public/landing.html
+++ b/frontend/public/landing.html
@@ -73,6 +73,7 @@
         <footer class="footer">
             <img class="footer-logo-circle" src="/logo-circle.png">
             <img class="footer-logo-text" src="/title-logo-white.svg">
+            <a class="footer-terms-link" href="/terms-and-conditions.html">Terms and Condtitions</a>
         </footer>
         
         <script src="/demo.bundle.js"></script>
