pasted adsense code

--- a/frontend/public/landing.html
+++ b/frontend/public/landing.html
@@ -20,6 +20,10 @@
             gtag('config', 'G-V9Q3RDKCLT');
         </script>
 
+        <!-- adsense -->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1524304756947795"
+        crossorigin="anonymous"></script>
+
         <link rel="stylesheet" href="/landing.css" />
         <link rel="stylesheet" href="/period.css" />
     </head>
