--- a/frontend/public/main.html
+++ b/frontend/public/main.html
@@ -11,9 +11,9 @@
 
         <!-- media.net ads -->
         <script type="text/javascript">
-            {`window._mNHandle = window._mNHandle || {};
+            window._mNHandle = window._mNHandle || {};
             window._mNHandle.queue = window._mNHandle.queue || [];
-            medianet_versionId = "3121199";`}
+            medianet_versionId = "3121199";
         </script>
         <script src="https://contextual.media.net/dmedianet.js?cid=8CU2150T1" async="async"></script>
 
