--- a/frontend/public/main.html
+++ b/frontend/public/main.html
@@ -9,15 +9,15 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
 
-        <!-- media.net ads -->
-        <script type="text/javascript">
-            window._mNHandle = window._mNHandle || {};
-            window._mNHandle.queue = window._mNHandle.queue || [];
-            medianet_versionId = "3121199";
-        </script>
-        <script src="https://contextual.media.net/dmedianet.js?cid=8CU2150T1" async="async"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-V9Q3RDKCLT"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
-        
+            gtag('config', 'G-V9Q3RDKCLT');
+        </script>
+
         <link rel="stylesheet" href="/login.css" />
         <link rel="stylesheet" href="/periods-table.css" />
         <link rel="stylesheet" href="/period.css" />
