refactor, add blog, and minor changes

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,15 +17,11 @@
 
             gtag('config', 'G-V9Q3RDKCLT');
         </script>
-
-        <link rel="stylesheet" href="/login.css" />
-        <link rel="stylesheet" href="/periods-table.css" />
-        <link rel="stylesheet" href="/period.css" />
     </head>
     <body>
         <div id="root">
             
         </div>
-        <script src="/main.bundle.js"></script>
+        <script src="/index.bundle.js"></script>
     </body>
 </html>
